# docgen

./: .env  .env.example  .gitignore  LICENSE  README.md  README_TEST.md  config.json  pyproject.toml
.docgen_cache/: cache.json
src/: README.md
src/docgen/: __init__.py  cache.py  config.py  exporter.py  llm.py  main.py  prompt.py  scanner.py  setup.py
